# mcp-duckduckgo

./: .dockerignore  Cargo.toml  Dockerfile  README.md  mcp-websearch
src/: lib.rs  main.rs  main.rs.bak
src/mcp/: mod.rs  tests.rs
src/models/: mod.rs  tests.rs
src/search/: mod.rs  tests.rs
tests/: e2e_tests.rs
