[package]
name = "mcp-websearch"
version = "1.0.0"
edition = "2024"
description = "High-performance MCP Web Search Server using DuckDuckGo"
license = "MIT"

[[bin]]
name = "mcp-websearch"
path = "src/main.rs"

[dependencies]
# MCP protocol (JSON-RPC via stdio)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client & HTML parsing (use rustls instead of OpenSSL)
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }
scraper = "0.22"
urlencoding = "2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
